fixes scrollbar height

--- a/src/preview/src/App.css
+++ b/src/preview/src/App.css
@@ -4,6 +4,7 @@
 
   &::-webkit-scrollbar {
     width: 1rem;
+    height: 1rem;
   }
 
   &::-webkit-scrollbar-track {
